overflow fixed

--- a/src/app/pages/ip/details/details.component.scss
+++ b/src/app/pages/ip/details/details.component.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .ip-card {
   max-width: 400px;
   padding: 0.5rem;
@@ -20,7 +24,6 @@ h6 {
   font-weight: normal;
 }
 
-
 @media (max-width: 320px) {
   .ip-card {
     width: 90%;
@@ -39,11 +42,8 @@ h6 {
   }
 }
 
-
 @media (max-width: 801px) {
   .ip-card {
     width: 90%;
   }
 }
-
-
