--- a/src/app/pages/ip/ip-client/ip-client.component.scss
+++ b/src/app/pages/ip/ip-client/ip-client.component.scss
@@ -2,6 +2,7 @@ body {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  overflow: hidden;
 }
 .full {
   width: 100vw;
@@ -26,4 +27,3 @@ body {
   width: 50%;
   text-align: center;
 }
-
